--- a/package.json
+++ b/package.json
@@ -2,15 +2,11 @@
   "name": "currency-converter",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "22.11.0"
-  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "deploy": "wrangler publish"
+    "lint": "next lint"
   },
   "dependencies": {
     "axios": "^1.7.9",
