--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cypress": "^14.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "netlify-plugin-cache": "^1.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
