--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --headless",
-    "cypress:install": "cypress install"
+    "cypress:install": "cypress install",
+    "cy:run": "start-server-and-test start http://localhost:3000 cypress:run"
   },
   "dependencies": {
     "axios": "^1.7.9",
