--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-next": "15.1.6",
     "netlify-plugin-cache": "^1.0.3",
     "postcss": "^8",
+    "start-server-and-test": "^2.0.10",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
