--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build && npm run cy:run"
+  command = "npm run build && npm run cypress:install && npm run cy:run"
   publish = ".next"
 
 [build.environment]
