--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --headless",
     "cypress:install": "cypress install",
-    "cy:run": "start-server-and-test start http://localhost:3000 cypress:run"
+    "cy:run": "start http://localhost:3000 cypress:run"
   },
   "dependencies": {
     "axios": "^1.7.9",
@@ -29,7 +29,6 @@
     "eslint-config-next": "15.1.6",
     "netlify-plugin-cache": "^1.0.3",
     "postcss": "^8",
-    "start-server-and-test": "^2.0.10",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
