--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --headless",
     "cypress:install": "cypress install",
-    "cy:start:run": "start-server-and-test start http://localhost:3000 cypress:run"
+    "cypress:run:verbose": "cypress run --reporter cypress-multi-reporters --reporter-options configFile=reporter-config.json",
+    "cy:start:run": "start-server-and-test start http://localhost:3000 cypress:run:verbose"
   },
   "dependencies": {
     "axios": "^1.7.9",
