use CypressBinary in path

--- a/netlify.toml
+++ b/netlify.toml
@@ -8,7 +8,7 @@
 
 [cache]
   [[cache.directories]]
-    path = "/opt/buildhome/.cache/Cypress"
+    #path = "/opt/buildhome/.cache/Cypress"
     #If you are having issues you can also try adding this line.
-    #path = "node_modules/.cache/CypressBinary"
+    path = "node_modules/.cache/CypressBinary"
 
